# mindrl

./: .gitignore  README.md  README_en.md  pyproject.toml
docs/: ar_opd_vs_ppo_plan_zh.md  custom_reward.md  framework_integration_decision.md  generalized_opd_design_zh.md  idea_overlap_assessment.md  meeting_brief_2026_06_21_zh.md  mindrl_80_reproduction_report_zh.md  mindrl_repro_checklist.md  minimal_repro_design.md  mvp_sync_2026_07_25.md  next_node_runbook.md  opd_and_mindrl_explainer_zh.md  quickstart_ar_grpo.md  quickstart_ar_lora.md  quickstart_ar_opd.md  quickstart_diffusion_ddpo.md  real_results_2026_06_24.md  real_results_2026_06_26_gpu2.md  real_results_2026_06_27_qwen_7b_14b.md  reproduction_model_feasibility.md  reproduction_runbook_zh.md  rl_landscape.md  troubleshooting.md  two_week_pilot.md
examples/: build_benchmark_jsonl.py  hf_ar_proxy_nctc.py  minimal_discrete_repro.py  offline_random_ar_proxy_nctc.py  run_ar_ppo_style_smoke.py  run_controller_ablation.py  run_cpu_pilot.sh  run_dllm_block_pilot.py  run_flow_diffusion_interface_pilot.py  run_flow_surrogate_pilot.py  run_gpu_pilot.sh  run_mvp_smoke.py  run_peft_opd_smoke.py  run_peft_sft_smoke.py  run_real_ar_smoke.py  run_real_opd_smoke.py  run_task_nctc_proxy.py  run_vla_interface_pilot.py
outputs/: llada_benchmark_likelihood_smoke.jsonl  llada_confidence_adaptive_smoke.jsonl  llada_dynamic_adaptive_entropy.jsonl  llada_dynamic_adaptive_margin.jsonl  llada_dynamic_adaptive_top1.jsonl  llada_fixed_adaptive_smoke.jsonl  llada_generate_smoke.json  llada_likelihood_smoke.jsonl  (+2 more)
tests/: test_core.py  (+27 more)
(+38 files in other folders)
