[project]
name = "mindrl-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "yy", email = "1311095683@qq.com" }
]
requires-python = ">=3.12"
dependencies = [
    "torch>=2.12.1",
    "transformers>=5.12.1",
]

[project.scripts]
mindrl-repo = "mindrl_repo:main"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"
