[project]
name = "mindrl"
version = "0.1.0"
description = "Transparent RL infrastructure primitives for AR LLM and diffusion research pilots"
readme = "README.md"
authors = [
    { name = "yy", email = "1311095683@qq.com" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "peft>=0.19.1",
    "torch==2.7.1",
    "transformers>=5.12.1",
]

[project.scripts]
mindrl = "mindrl:main"

[tool.uv]
cache-dir = "/gpfs/hulab/liyongqi/.cache/uv"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"
